# DonPAPI

./: .gitignore  DonPAPI.py  LICENSE  Makefile  README.md  database.py  import_cookies.py  key.pvk  myseatbelt.py  myusers.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: lint_python.yml
DonPAPI/: DonPAPI.py  database.py  myseatbelt.py  myusers.py
DonPAPI/config/: seatbelt_config.json
DonPAPI/lazagne/config/: change_privileges.py  dpapi_structure.py  execute_cmd.py  manage_modules.py  module_info.py  run.py  users.py  winstructure.py  write_output.py
DonPAPI/lib/: RecentFiles.py  adconnect.py  certificates.py  compliance_security.py  defines.py  dpapi.py  fileops.py  neo4jconnection.py  new_module.py  reg.py
DonPAPI/lib/dpapi_pick/: credhist.py
DonPAPI/res/css/: style.css
DonPAPI/software/browser/: chrome_decrypt.py  firefox_decrypt.py  mozilla.py
DonPAPI/software/manager/: keepass.py  lastpass.py  mRemoteNG.py
DonPAPI/software/sysadmin/: vnc-local.py  vnc.py
config/: donpapi_config.json  seatbelt_config.json
donpapi/: core.py  database.py  entry.py  myseatbelt.py  myusers.py  reporting.py  server.py
donpapi/collectors/: Certificates.py  Chrome.py  Chromium.py  CloudCredentials.py  CredMan.py  CredManager.py  Firefox.py  IDEProjects.py  MRemoteNG.py  MobaXTerm.py  NotepadPP.py  PasswordManagers.py  PowerShellHistory.py  RDCMan.py  RDCManager.py  RecentFiles.py  RecycleBin.py  SCCM.py  SSHSecrets.py  VNC.py  Vaults.py  VersionControlSystems.py  Wam.py  Wifi.py  certificates.py  chromium.py  cloudcredentials.py  credman.py  devprojects.py  firefox.py  mobaxterm.py  mremoteng.py  notepadpp.py  passwordmanagers.py  powershellhistory.py  rdcman.py  recent_files.py  recyclebin.py  sccm.py  sshsecrets.py  (+5 more)
donpapi/config/: donpapi_config.json
donpapi/lazagne/config/: change_privileges.py  dpapi_structure.py  execute_cmd.py  manage_modules.py  module_info.py  run.py  users.py  winstructure.py  write_output.py
donpapi/lib/: RecentFiles.py  adconnect.py  certificates.py  compliance_security.py  config.py  database.py  dpapi.py  fileops.py  first_run.py  google_refresh_token.py  logger.py  neo4jconnection.py  new_module.py  paths.py  reg.py  secretsdump.py  toolbox.py  utils.py  wmi.py
donpapi/lib/dpapi_pick/: credhist.py
donpapi/res/: donpapi.conf  style.css
donpapi/res/gui/: index.html
donpapi/software/browser/: chrome_decrypt.py  firefox_decrypt.py  mozilla.py
donpapi/software/manager/: keepass.py  lastpass.py  mRemoteNG-local.py  mRemoteNG.py
donpapi/software/sysadmin/: putty.py  vnc.py  winscp.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.scss
frontend/src/components/: Certificates.vue  Cookies.vue  (+3 more)
lazagne/config/: manage_modules.py  users.py
lib/: RecentFiles.py  adconnect.py  certificates.py  compliance_security.py  dpapi.py  fileops.py  neo4jconnection.py  new_module.py  reg.py  secretsdump.py  toolbox.py
lib/dpapi_pick/: credhist.py  crypto.py
software/browser/: chrome_decrypt.py  firefox_decrypt.py  mozilla.py
software/manager/: keepass.py  lastpass.py  mRemoteNG-local.py  mRemoteNG.py
software/sysadmin/: d3des.py  putty.py  teamviewer.py  vnc-local.py  vnc.py  winscp.py
utils/: google_refresh_token.py
(+160 files in other folders)
