[tool.poetry]
name = "donpapi"
version = "1.1.0"
description = "Dumping revelant information on compromised targets without AV detection"
authors = ["Login Securite <contact@login-securite.com>"]
readme = "readme.md"
homepage = "https://github.com/login-securite/DonPAPI"
repository = "https://github.com/login-securite/DonPAPI"
exclude = []
include = ["donpapi/config/*", "donpapi/res/*"]
classifiers = [
    'Environment :: Console',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]
packages = [
    { include = "donpapi"},
    { include = "donpapi/lib"},
    { include = "donpapi/software"},
    { include = "donpapi/lazagne"},
]

[tool.poetry.scripts]
DonPAPI = 'donpapi.entry:main'

[tool.poetry.dependencies]
python = "^3.9"
impacket = "^0.9.23"
pyasn = "^1.6.1"
LnkParse3 = "^1.2.0"
wheel = "^0.37.0"
M2Crypto = "^0.38.0"
pycryptodome = "^3.11.0"
swig = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
