[tool.poetry]
name = "donpapi"
version = "1.1.1"
description = "Dumping revelant information on compromised targets without AV detection"
authors = ["Login Securite <contact@login-securite.com>"]
readme = "readme.md"
homepage = "https://github.com/login-securite/DonPAPI"
repository = "https://github.com/login-securite/DonPAPI"
license = "'GNU (GPLv3)"
exclude = []
include = ["donpapi/config/*", "donpapi/res/*"]
classifiers = [
    'Environment :: Console',
    'Programming Language :: Python :: 3',
    'Topic :: Security',
]
packages = [
    { include = "donpapi"},
    { include = "donpapi/lib"},
    { include = "donpapi/software"},
    { include = "donpapi/lazagne"},
]

[tool.poetry.scripts]
DonPAPI = 'donpapi.entry:main'

[tool.poetry.dependencies]
python = "^3.9"
impacket = "^0.9.23"
pyasn1 = "^0.4.8"
LnkParse3 = "^1.2.0"
cryptography = "^40.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
